# zava-supply-chain

./: .gitignore  README.md  README.zh.md
workshop/: .env.examples  pyproject.toml
workshop/Code/LAB01-inventory-agent/dotnet/ZaraAgent/: Program.cs  ZaraAgent.csproj
workshop/Code/LAB01-inventory-agent/python/: zara_agent.py
workshop/Code/LAB02-procurement-toolbox/dotnet/BootstrapToolbox/: BootstrapToolbox.csproj  Program.cs
workshop/Code/LAB02-procurement-toolbox/dotnet/PierreAgent/: PierreAgent.csproj  Program.cs
workshop/Code/LAB02-procurement-toolbox/python/: bootstrap_toolbox.py  pierre_agent.py
workshop/Code/LAB03-customer-memory-eval/dotnet/: aria_agent.py  evaluate_aria.py  redteam_aria.py
workshop/Code/LAB03-customer-memory-eval/python/: evaluate_aria.py  redteam_aria.py
workshop/Code/LAB04-fulfillment-workflow/python/: fulfillment_workflow.py
workshop/Code/LAB05-control-tower-agui/python/: client_smoketest.py  server.py
workshop/LAB01-inventory-agent/: README.md  README.zh.md
workshop/LAB01-inventory-agent/ZaraAgent/: ZaraAgent.csproj
workshop/LAB02-procurement-toolbox/: README.md  README.zh.md
workshop/LAB03-customer-memory-eval/: README.md  README.zh.md
workshop/LAB04-fulfillment-workflow/: README.md  README.zh.md
workshop/LAB05-control-tower-agui/: README.md  README.zh.md
workshop/data/: README.md  README.zh.md  ZavaData.cs  carriers.json  contracts.json  customers.json  eval_queries.jsonl  exceptions.json  inventory.json  orders.json  purchase_orders.json  skus.json  suppliers.json  warehouses.json  zava_data.py
(+75 files in other folders)
