[project]
name = "workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-framework>=1.7.0",
    "agent-framework-ag-ui>=1.0.0rc3",
    "agent-framework-azure-ai>=1.0.0rc6",
    "azure-identity>=1.26.0b2",
    "fastapi>=0.133.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]
